# embellama

./: .clog.toml  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  batching_implementation_plan.md  build.rs  cliff.toml  implementation_plan.md  implementation_plan_lib.md  implementation_plan_server.md  justfile  test_api.sh
.github/actions/setup-build/: action.yml
.github/workflows/: ci.yml
benches/: batch_allocation_bench.rs  batch_processing_bench.rs  cache_benchmark.rs  embeddings_bench.rs
examples/: batch.rs  embedded_server.rs  error_handling.rs  simple.rs
scripts/: compare-servers.py  package.json  test-openai-js.mjs  test-openai-python.py
src/: backend.rs  batch.rs  batch_pool.rs  config.rs  engine.rs  error.rs  gguf.rs  lib.rs  model.rs
src/cache/: embedding_cache.rs  memory_monitor.rs  mod.rs  prefix_cache.rs  token_cache.rs
src/server/: api_types.rs  backpressure.rs  batch_scheduler.rs  cache_handlers.rs  channel.rs  dispatcher.rs  handlers.rs  inference_worker.rs  metrics.rs  middleware.rs  mod.rs  rate_limiter.rs  state.rs  worker.rs
tests/: backend_tests.rs  batch_pool_tests.rs  batch_processing_tests.rs  batch_scheduler_tests.rs  cache_integration_tests.rs  cache_management_tests.rs  cache_tests.rs  common.rs  concurrency_tests.rs  config_validation_tests.rs  context_size_tests.rs  effective_max_tokens_test.rs  integration_tests.rs  jina_model_batch_overflow_test.rs  openai_compat_tests.rs  prefix_cache_tests.rs  property_tests.proptest-regressions  property_tests.rs  reranking_tests.rs  server_api_tests.rs  server_library_test.rs  server_load_tests.rs  server_test_helpers.rs  truncation_tests.rs
