[package]
name = "embellama"
version = "0.1.0"
edition = "2024"
authors = ["Embellama Contributors"]
description = "High-performance Rust library for generating text embeddings using llama-cpp"
repository = "https://github.com/darjus/embellama"
readme = "README.md"
keywords = ["embeddings", "llama", "nlp", "machine-learning", "ai"]
categories = ["science", "api-bindings", "text-processing"]
license = "Apache-2.0"

[dependencies]
llama-cpp-2 = { version = "0.1.119" }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
parking_lot = "0.12"
num_cpus = "1.16"

# Optional server dependencies
axum = { version = "0.8", optional = true }
tokio = { version = "1.44", features = ["full"], optional = true }
clap = { version = "4.4", features = ["derive", "env"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
uuid = { version = "1.11", features = ["v4", "serde"], optional = true }
base64 = { version = "0.22", optional = true }
self_cell = "1.2.0"
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.0"
tempfile = "3.8"
tokio-test = "0.4"
pretty_assertions = "1.4"
proptest = "1.4"
test-log = { version = "0.2.18", features = ["trace"] }

[features]
default = []
server = ["dep:axum", "dep:tokio", "dep:clap", "dep:tower", "dep:tower-http", "dep:uuid", "dep:base64"]

[[bin]]
name = "embellama-server"
required-features = ["server"]
path = "src/bin/server.rs"

[[bench]]
name = "embeddings_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
